--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wordpress/scripts": "^28.3.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "path": "^0.12.7",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
   "dependencies": {
