--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@wordpress/scripts": "^28.3.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "path": "^0.12.7",
     "terser-webpack-plugin": "^5.3.10",
