--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "swiper": "^11.1.12"
   }
 }
